fix correct circleCI file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@
 # Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 # Jobs
-
+  
 jobs:
   build:
     docker:
@@ -12,20 +12,13 @@ jobs:
           username: ${GCR_DOCKER_RO_USERNAME}
           password: ${GCR_DOCKER_RO_PASSWORD}
 
-    working_directory: /root/go/src/github.com/accedian/adh-fedex
+    working_directory: /root/go/src/github.com/accedian/grafana-docker
 
     steps:
-      - checkout 
-    
-      - run: 
-          name: Downloading the dependencies
-          command: go get -v -t -d ./...
-      - run: 
-          name: Running unit tests
-          command: go test -v ./...
+      - build 
       - run:
-          name: Building the binaries
-          command: make circleci-binaries
+          name: Building Docker Container
+          command: make circleci-docker
 
   release:
     docker:
@@ -34,29 +27,32 @@ jobs:
           username: ${GCR_DOCKER_RO_USERNAME}
           password: ${GCR_DOCKER_RO_PASSWORD}
 
-    working_directory: /root/go/src/github.com/accedian/adh-fedex
+    working_directory: /root/go/src/github.com/accedian/grafana-docker
     steps:
-      - checkout 
-      - run: 
-          name: Downloading the dependencies
-          command: go get -v -t -d ./...
-
+  
       - setup_remote_docker
+      
+      - run:
+          name: unpacking service account
+          command: |
+            echo $GCLOUD_SERVICE_KEY | base64 -d  > ${HOME}/gcloud-service-key.json
 
+      - run:
+          name: Login into docker repository
+          command: |
+            docker login -u _json_key -p "$(echo $GCR_DOCKER_RW_PASSWORD)" https://gcr.io
       - run:
           name: "Push image to GCR"
           command: |
             # Only push docker image when on master branch on the Accedian project
             if [ "${CIRCLE_BRANCH}" == "master" ] && [ "${CIRCLE_PROJECT_USERNAME}" == "Accedian" ]; then
-               echo $GCLOUD_SERVICE_KEY | base64 -d  > ${HOME}/gcloud-service-key.json
-               docker login -u _json_key -p "$(echo $GCR_DOCKER_RW_PASSWORD)" https://gcr.io
                echo "Now Tagging"
                git config --global user.email "${CIRCLE_USERNAME}@accedian.com"
                git config --global user.name "CircleCI"
                git semver minor
                export DOCKER_VER=$(git semver get)
                git push origin master ${DOCKER_VER}
-               make circleci-push
+               make circleci-push  
             fi
 
 workflows:
@@ -73,4 +69,3 @@ workflows:
           filters:
             branches:
               only: master       
-
