Feature - Fixed prometheus datasource to worked with the unified URL datahub scheme

--- a/provisioning/datasources/prometheus-datasource.yaml
+++ b/provisioning/datasources/prometheus-datasource.yaml
@@ -13,7 +13,7 @@ datasources:
   # <int> org id. will default to orgId 1 if not specified
   orgId: 1
   # <string> url
-  url: http://prometheus:9090
+  url: http://prometheus:9090/prometheus
   version: 1
   # <bool> allow users to edit datasources from the UI.
   editable: true
