--- a/provisioning/datasources/prometheus-datasource.yaml
+++ b/provisioning/datasources/prometheus-datasource.yaml
@@ -17,3 +17,21 @@ datasources:
   version: 1
   # <bool> allow users to edit datasources from the UI.
   editable: true
+
+  # <string, required> name of the datasource. Required
+- name: Elasticsearch
+  # <string, required> datasource type. Required
+  type: elasticsearch
+  # <string, required> access mode. direct or proxy. Required
+  access: proxy
+  database: "filebeat-*"
+  # <int> org id. will default to orgId 1 if not specified
+  orgId: 1
+  # <string> url
+  url: http://elasticsearch01:9200
+  version: 1
+  # <bool> allow users to edit datasources from the UI.
+  editable: true
+  jsonData:
+    timeField: "@timestamp"
+    esVersion: 70
