--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,8 +45,8 @@ jobs:
                git config --global user.email "${CIRCLE_USERNAME}@accedian.com"
                git config --global user.name "CircleCI"
                git semver minor
-               export DOCKER_VER=$(git semver get)
-               git push origin master ${DOCKER_VER}
+               export IMAGE_TAG=$(git semver get)
+               git push origin master ${IMAGE_TAG}
                make push
             fi
 
