--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,10 @@ version: 2
 jobs:
   build:
     docker:
-      - image: gcr.io/npav-172917/docker-go-sdk:0.58.0-alpine
+      # - image: gcr.io/npav-172917/docker-go-sdk:0.58.0-alpine
+      - image: gcr.io/npav-172917/aod-deployer:15.111.81
         auth:
-          username: _json_key
+          username: ${GCR_DOCKER_RO_USERNAME}
           password: ${GCR_DOCKER_RO_PASSWORD}
 
     working_directory: /root/go/src/github.com/accedian/grafana-docker
