--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
+orbs:
+  gcp-cli: circleci/gcp-cli@1.8.4
+  slack:   circleci/slack@3.4.2
 version: 2.1
 # Jobs
   
