--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,10 @@ version: 2.1
 jobs:
   build:
     docker:
-      #- image: gcr.io/npav-172917/docker-go-sdk:0.58.0-alpine
-      - image: gcr.io/npav-172917/aod-deployer:15.111.81
+      - image: gcr.io/npav-172917/docker-go-sdk:0.58.0-alpine
         auth:
           username: _json_key
-          password: ${GCR_DOCKER_RW_PASSWORD}
+          password: ${GCR_DOCKER_RO_PASSWORD}
 
     working_directory: /root/go/src/github.com/accedian/grafana-docker
 
